# RegIntel

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  extractor_guide.md  manifest_spec.md
examples/: README.md
examples/minimal/: README.md  manifest.json
examples/opentitan_demo/: README.md
src/regintel/: __main__.py  cli.py  config.py  pipeline.py
src/regintel/clustering/: CLAUDE.md  _helpers.py  base.py  cascade.py  tier1_signature.py  tier2_structural.py  tier3_fuzzy.py
src/regintel/extractors/: CLAUDE.md  __init__.py  base.py  generic.py  registry.py  sva.py  uvm.py  verilator.py
src/regintel/flaky/: detector.py
src/regintel/ingestion/: loader.py  manifest.py
src/regintel/models/: __init__.py  cluster.py  failure.py  report.py  run.py  serialization.py
src/regintel/normalization/: CLAUDE.md  rules.py  signature.py
src/regintel/reporting/: html.py  json_export.py  terminal.py  view_model.py
src/regintel/utils/: hashing.py  logging.py  ordering.py
tests/: CLAUDE.md
tests/evaluation/: harness.py  metrics.py  test_harness.py
tests/evaluation/labeled/: run_01_bus_stall.json  run_02_two_scoreboards.json  run_03_mixed_failures.json
tests/fixtures/logs/: README.md
tests/fixtures/manifests/: minimal.json
tests/fixtures/normalization/: ansi_codes.expected.txt  ansi_codes.input.txt  array_index.expected.txt  array_index.input.txt  simple_uvm_error.expected.txt  simple_uvm_error.input.txt  sva_assertion.expected.txt  sva_assertion.input.txt  uvm_absolute_path.expected.txt  uvm_absolute_path.input.txt  uvm_hex_values.expected.txt  uvm_hex_values.input.txt  uvm_seed_pid.expected.txt  uvm_seed_pid.input.txt  verilator_error.expected.txt  verilator_error.input.txt
tests/integration/: test_end_to_end.py
tests/unit/test_clustering/: conftest.py  (+4 more)
(+26 files in other folders)
