[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regintel"
version = "0.1.0"
description = "Regression intelligence for chip verification"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Francesco Laezza", email = "francesco@laezza.it" }]
readme = "README.md"
keywords = ["chip verification", "EDA", "regression", "clustering", "UVM", "Verilator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rapidfuzz>=3.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/francescolaezza/regintel"
"Bug Tracker" = "https://github.com/francescolaezza/regintel/issues"

[project.scripts]
regintel = "regintel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/regintel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "evaluation: clustering quality harness; may be noisy",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
